Fix responsive nav menu bar covering the logo by shifting the page down 50px from 1200px and smaller

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -5,6 +5,12 @@ body {
   line-height: 18px;
 }
 
+@media(max-width:1200px) {
+  body {
+    padding-top: 100px;
+  }
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-serif;
   color: $black;
