--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -58,3 +58,9 @@
     font-size: 18px;
   }
 }
+
+@media(max-width:1200px) {
+  .nav-primary {
+    background-color: $grey;
+  }
+}
